--- a/TestControlTool.Web/Views/Shared/Create.cshtml
+++ b/TestControlTool.Web/Views/Shared/Create.cshtml
@@ -15,7 +15,7 @@
         @foreach (var property in Model.VisibleProperties(VCenterMachineModel.NotShownProperties))
         {
             using(Html.ControlGroupFor(property.Name)){
-                @Html.Label(property.Name.ToSeparatedWords(), new { @class = "control-label" })
+                @Html.Label(property.Name, property.Name.ToSeparatedWords(), new { @class = "control-label" })
                  <div class="controls">
                      @Html.Editor(property.Name, new { @class = "input-xlarge" })
                      @Html.ValidationMessage(property.Name, null, new { @class = "help-inline" })
